tests/errors/surf_exc_02.ki
# a failing assert with no message reports 'assertion failed'
assert 1 == 2
